--- a/profilebeautysalon_location.html
+++ b/profilebeautysalon_location.html
@@ -78,10 +78,9 @@ function MM_swapImage() { //v3.0
           <td valign="top" bgcolor="#FFFFFF"> <table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr> 
                 <td width="5"><img src="images/shad2.gif" width="5" height="250"></td>
-                <td width="382"><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,29,0" width="382" height="250">
-                    <param name="movie" value="flash/main.swf">
-                    <param name="quality" value="high">
-                    <embed src="flash/main.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="382" height="250"></embed></object></td>
+                <td width="382">
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3579.4326851100823!2d50.589028!3d26.215127!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x984c02b2fd23b9d6!2sProfile+Beauty+Salon!5e0!3m2!1sen!2sch!4v1397221503370" width="382" height="250" frameborder="0" style="border:0"></iframe>
+                </td>
                 <td valign="top" background="images/bg_glo.jpg" bgcolor="#CFECCF"> 
                   <table width="90%" border="0" align="center" cellpadding="0" cellspacing="0">
                     <tr> 
