--- a/body.html
+++ b/body.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile Beauty Salon | Kingdom of Bahrain</title>
+    <title>Body Treatments and Massage | Profile Beauty Salon | Kingdom of Bahrain</title>
     <link rel="stylesheet" href="stylesheets/app.css" />
     <link rel="stylesheet" href="pbs.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
@@ -29,25 +29,49 @@
     </div>
 
     <div class="row">
-      <div class="large-12 columns">
-        <h2>Welcome!</h2>
-        <p>Profile Beauty Salon is one of the first and most renowed salons of Bahrain.</p>
-        <div class="panel">
-          <h3>Our Services</h3>
-          <ul>
-            <li><a href="facial.html">Facial Treatments</a></li>
-            <li><a href="hair_removal.html">Hair Removal</a></li>
-            <li><a href="body.html">Body Treatments / Massage</a></li>
-            <li><a href="hair.html">Hair Treatments</a></li>
-            <li><a href="other_services.html">Other Services</a></li>
-            <li><a href="price_list.html">Price List</a></li>
-          </ul>
-        </div>
+      <div class="large-2 columns">
+        &nbsp;
+      </div>
+      <div class="large-10 columns">
+        <h2>Body Treatments &amp; Massage</h2>
+        <p>Body Peeling, Body Massage, Aroma / Relaxing Massage, Chinese Massage, Reflexology.</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="large-2 columns">
+        <span class="th [radius]">
+          <img src="images/btm1.jpg">
+        </span>
+      </div>
+      <div class="large-10 columns">
+        <h3>Body Peeling</h3>
+        <p>Steam Room / Removing dead cells from the body.</p>
       </div>
     </div>
 
     <p>&nbsp;</p>
 
+    <div class="row">
+      <div class="large-2 columns">
+        <span class="th [radius]">
+          <img src="images/btm2.jpg">
+        </span>
+      </div>
+      <div class="large-10 columns">
+        <h3>Body Massage</h3>
+        <ul>
+          <li>Aroma Relaxing Massage</li>
+          <li>Stone Massage</li>
+          <li>Chinese Massage</li>
+          <li>Thai Massages</li>
+          <li>Reflexology</li>
+        </ul>
+      </div>
+    </div>
+    
+    <p>&nbsp;</p>
+    
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
     <script src="js/app.js"></script>
