--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile Beauty Salon | Kingdom of Bahrain</title>
+    <title>Contact | Profile Beauty Salon | Kingdom of Bahrain</title>
     <link rel="stylesheet" href="stylesheets/app.css" />
     <link rel="stylesheet" href="pbs.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
@@ -30,17 +30,29 @@
 
     <div class="row">
       <div class="large-12 columns">
-        <h2>Welcome!</h2>
-        <p>Profile Beauty Salon is one of the first and most renowed salons of Bahrain.</p>
+        <h2>Contact Information</h2>
         <div class="panel">
-          <h3>Our Services</h3>
           <ul>
-            <li><a href="facial.html">Facial Treatments</a></li>
-            <li><a href="hair_removal.html">Hair Removal</a></li>
-            <li><a href="body.html">Body Treatments / Massage</a></li>
-            <li><a href="hair.html">Hair Treatments</a></li>
-            <li><a href="other_services.html">Other Services</a></li>
-            <li><a href="price_list.html">Price List</a></li>
+            <li>Tel. <b>+973 177131155</b></li>
+            <li><a href="mailto:info@profilebeautysalon.com">info@profilebeautysalon.com</a></li>
+            <li>
+              Osama Bin Zaid Avenue, Adliya, Kingdom of Bahrain
+              <div class="row">
+                <div class="large-6 columns">
+                  <img src="images/loc3.jpg">
+                </div>
+                <div class="large-6 columns">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3579.4326851100823!2d50.589028!3d26.215127!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x984c02b2fd23b9d6!2sProfile+Beauty+Salon!5e0!3m2!1sen!2sch!4v1397221503370" width="382" height="250" frameborder="0" style="border:0"></iframe>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <h2>Opening Hours</h2>
+        <div class="panel">
+          <ul>
+            <li>Saturday - Thursday: 8.30am - 7.30pm</li>
+            <li>Friday 9am - 5pm</li>
           </ul>
         </div>
       </div>
