--- a/other_services.html
+++ b/other_services.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile Beauty Salon | Kingdom of Bahrain</title>
+    <title>Other Services | Profile Beauty Salon | Kingdom of Bahrain</title>
     <link rel="stylesheet" href="stylesheets/app.css" />
     <link rel="stylesheet" href="pbs.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
@@ -29,20 +29,51 @@
     </div>
 
     <div class="row">
-      <div class="large-12 columns">
-        <h2>Welcome!</h2>
-        <p>Profile Beauty Salon is one of the first and most renowed salons of Bahrain.</p>
-        <div class="panel">
-          <h3>Our Services</h3>
-          <ul>
-            <li><a href="facial.html">Facial Treatments</a></li>
-            <li><a href="hair_removal.html">Hair Removal</a></li>
-            <li><a href="body.html">Body Treatments / Massage</a></li>
-            <li><a href="hair.html">Hair Treatments</a></li>
-            <li><a href="other_services.html">Other Services</a></li>
-            <li><a href="price_list.html">Price List</a></li>
-          </ul>
-        </div>
+      <div class="large-2 columns">
+        &nbsp;
+      </div>
+      <div class="large-10 columns">
+        <h2>Other Services</h2>
+        <p>Manicure, Pedicure, Make up</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="large-2 columns">
+        <span class="th [radius]">
+          <img src="images/os2.jpg">
+        </span>
+      </div>
+      <div class="large-10 columns">
+        <h3>Manicure</h3>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="large-2 columns">
+        <span class="th [radius]">
+          <img src="images/os1.jpg">
+        </span>
+      </div>
+      <div class="large-10 columns">
+        <h3>Pedicure</h3>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="large-2 columns">
+        <span class="th [radius]">
+          <img src="images/h2.jpg">
+        </span>
+      </div>
+      <div class="large-10 columns">
+        <h3>Make Up</h3>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
       </div>
     </div>
 
