forgot slimming treatments

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <li><a href="facial.html">Facial Treatments</a></li>
             <li><a href="hair_removal.html">Hair Removal</a></li>
             <li><a href="body.html">Body Treatments / Massage</a></li>
+            <li><a href="slimming.html">Slimming Treatments</a></li>
             <li><a href="hair.html">Hair Treatments</a></li>
             <li><a href="other_services.html">Other Services</a></li>
             <li><a href="price_list.html">Price List</a></li>
