--- a/profilebeautysalon_hair.html
+++ b/profilebeautysalon_hair.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Profile Beauty Salon | Kingdom of Bahrain</title>
+<meta http-equiv="refresh" content="0; url=hair.html" />
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <META http-equiv="Page-Enter" CONTENT="RevealTrans(Duration=4,Transition=6)">
 <META NAME="TITLE" CONTENT="Profile Beauty Salon">
