--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
         <div class="panel">
           <ul>
             <li>Saturday - Thursday: 8.30am - 7.30pm</li>
-            <li>Friday 9am - 5pm</li>
+            <li>Friday: 9am - 5pm</li>
           </ul>
         </div>
       </div>
