add new pics in gallery

--- a/gallery.html
+++ b/gallery.html
@@ -60,6 +60,8 @@
           <li><a href="gallery/30.jpg"><img src="gallery/tn_30.jpg"></li>
           <li><a href="gallery/31.jpg"><img src="gallery/tn_31.jpg"></li>
           <li><a href="gallery/32.jpg"><img src="gallery/tn_32.jpg"></li>
+          <li><a href="gallery/33.jpg"><img src="gallery/tn_33.jpg"></li>
+          <li><a href="gallery/34.jpg"><img src="gallery/tn_34.jpg"></li>
         </ul>
       </div>
     </div>
