--- a/contact.html
+++ b/contact.html
@@ -51,8 +51,8 @@
         <h2>Opening Hours</h2>
         <div class="panel">
           <ul>
-            <li>Saturday - Thursday: 8.30am - 7.30pm</li>
-            <li>Friday: 9am - 5pm</li>
+            <li>Saturday &ndash; Thursday: 8.30am &ndash; 7.30pm</li>
+            <li>Friday: 9am &ndash; 5pm</li>
           </ul>
         </div>
       </div>
