--- a/price_list.html
+++ b/price_list.html
@@ -43,68 +43,64 @@
           </thead>
           <tbody>
             <tr>
-              <td><h3>Facial Treatments</h3></td>
+              <td><h3>Facial treatments</h3></td>
               <td>&nbsp;</td>
             </tr>
             <tr>
               <td>Deep cleansing facial</td>
+              <td>30 BD</td>
+            </tr>
+            <tr>
+              <td><h3>Anti-wrinkle firming treatments</h3></td>
               <td>&nbsp;</td>
             </tr>
             <tr>
-              <td>
-                Anti wrinkles firming treatment
-                <p>
-                <ul>
-                  <li>Perfect mask</li>
-                  <li>Collagen Caviar</li>
-                  <li>Collagen Aloe Vera</li>
-                  <li>Ice mask</li>
-                </ul>
-                </p>
-              </td>
-              <td>BD 27</td>
+              <td>Perfect mask</td>
+              <td>32 BD</td>
             </tr>
             <tr>
-              <td>
-                Anti-pigmentation treatment
-                <p>
-                <ul>
-                  <li>Whitenening</li>
-                  <li>Vitamin C</li>
-                </ul>
-                </p>
-              </td>
-              <td>BD 26</td>
+              <td>Collagen caviar</td>
+              <td>32 BD</td>
             </tr>
             <tr>
-              <td>
-                Treatment for sensitive skin
-                <p>
-                  <ul>
-                    <li>Phyto with special aroma oil</li>
-                  </ul>
-                </p>
-              </td>
+              <td>Collagen aloe vera</td>
+              <td>32 BD</td>
+            </tr>
+            <tr>
+              <td><h3>Anti-pigmentation treatment</h3></td>
               <td>&nbsp;</td>
             </tr>
             <tr>
-              <td>Anti-acne treatment</td>
+              <td>Whitening</td>
+              <td>32 BD</td>
+            </tr>
+            <tr>
+              <td>Vitamin C</td>
+              <td>30 BD</td>
+            </tr>
+            <tr>
+              <td>Phyto sensitive treatment with special aroma oil</td>
+              <td>30 BD</td>
+            </tr>
+            <tr>
+              <td><h3>Anti-acne treatments</h3></td>
               <td>&nbsp;</td>
             </tr>
             <tr>
-              <td>
-                Treatment for oily and dry skin
-                <p>
-                  <ul>
-                    <li>Thermo mask (stimulating the blood circulation)</li>
-                  </ul>
-                </p>
-              </td>
-              <td>BD 25</td>
+              <td>Oily &amp; dry skin treatment</td>
+              <td>30 BD</td>
             </tr>
             <tr>
-              <td>Special collagen eye treatment</td>
-              <td>BD 15</td>
+              <td>Bio mask</td>
+              <td>30 BD</td>
+            </tr>
+            <tr>
+              <td>Thermo mask</td>
+              <td>30 BD</td>
+            </tr>
+            <tr>
+              <td>Special eye collagen treatment</td>
+              <td>20 BD</td>
             </tr>
             <tr>
               <td><h3>Hair Removal</h3></td>
@@ -112,127 +108,131 @@
             </tr>
             <tr>
               <td>Electrolysis (first 5 minutes)</td>
-              <td>BD 4</td>
+              <td>&nbsp;4 BD</td>
             </tr>
             <tr>
-              <td>Full legs, arms</td>
-              <td>BD 12</td>
+              <td>Brazilian wax</td>
+              <td>12 BD</td>
+            </tr>
+            <tr>
+              <td>Legs &amp; arm waxing (full)</td>
+              <td>12 BD</td>
             </tr>
             <tr>
               <td>Face wax</td>
-              <td>BD 6</td>
+              <td>&nbsp;6 BD</td>
             </tr>
             <tr>
-              <td>Face wax with mask or gel</td>
-              <td>BD 10</td>
+              <td>+ mask or gel</td>
+              <td>10 BD</td>
             </tr>
             <tr>
-              <td>Eyebrow Tint</td>
-              <td>BD 3.5</td>
+              <td>Eye brow tint</td>
+              <td>&nbsp;4 BD</td>
             </tr>
             <tr>
-              <td>Eye lash Tint</td>
-              <td>BD 4</td>
+              <td>Eye brow shaping</td>
+              <td>&nbsp;2 BD</td>
             </tr>
             <tr>
-              <td><h3>Body Treatments</h3></td>
+              <td><h3>Body treatments</h3></td>
               <td>&nbsp;</td>
             </tr>
             <tr>
-              <td>Aroma / relaxing massage (1 hour)</td>
-              <td>BD 15</td>
+              <td>Aroma massage (1 hour)</td>
+              <td>18 BD</td>
             </tr>
             <tr>
               <td>Thai massage (1 ½ hour)</td>
-              <td>BD 20</td>
+              <td>25 BD</td>
             </tr>
             <tr>
-              <td>Reflexology (½ hour)</td>
-              <td>BD 8</td>
+              <td>Foot massage</td>
+              <td>&nbsp;8 BD</td>
+            </tr>
+            <tr>
+              <td>Reflexology (1 hour)</td>
+              <td>25 BD</td>
             </tr>
             <tr>
               <td>Stone massage (1 ½ hour)</td>
-              <td>BD 25</td>
-            </tr>
-             <tr>
-              <td>Herbal massage (1 ½ hour)</td>
-              <td>BD 25</td>
+              <td>25 BD</td>
             </tr>
             <tr>
               <td>Steam and Body peeling / scrub</td>
-              <td>BD 15</td>
+              <td>20 BD</td>
             </tr>
-             <tr>
-              <td><h3>Slimming Treatments</h3></td>
+            <tr>
+              <td>Scrub with mask</td>
+              <td>25 BD</td>
+            </tr>
+            <tr>
+              <td>Cero therapy</td>
+              <td>15 BD</td>
+            </tr>
+            <tr>
+              <td>Manicure, Pedicure</td>
+              <td>12 BD</td>
+            </tr>
+            <tr>
+              <td><h3>Slimming treatments</h3></td>
               <td>&nbsp;</td>
             </tr>
             <tr>
-              <td>Full Body wrap</td>
-              <td>BD 20 courses x 5 = BD 85</td>
+              <td>Full body wrap</td>
+              <td>20 BD x 5 sessions = 85 BD</td>
             </tr>
             <tr>
-              <td>Stomach wrap</td>
-              <td>BD 15 courses x 5 = BD 55</td>
+              <td>Stomach wraps</td>
+              <td>15 BD x 5 sessions = 55 BD</td>
             </tr>
             <tr>
               <td>STAR VAC</td>
               <td>
-                30 mins - BD 18 courses x 5 = BD 75<br>
-                45 mins - BD 25 courses x 5 = BD 100<br>
-                1 hour  - BD 30 courses x 5 = BD 130
+                30 minutes &ndash; 18 BD x 5 sessions = &nbsp;75 BD<br>
+                45 minutes &ndash; 25 BD x 5 sessions = 100 BD<br>
+                60 minutes &ndash; 30 BD x 5 sessions = 130 BD
               </td>
             </tr>
             <tr>
-              <td><h3>Hair &amp; Make Up Treatments</h3></td>
+              <td><h3>Hair style</h3></td>
               <td>&nbsp;</td>
             </tr>
             <tr>
               <td>Hair cut</td>
-              <td>BD 5</td>
+              <td>&nbsp;5 BD</td>
             </tr>
             <tr>
-              <td>Blow-dry</td>
-              <td>BD 5 minimum</td>
+              <td>Blow dry</td>
+              <td>&nbsp;5 BD</td>
             </tr>
             <tr>
-              <td>Hair Style</td>
-              <td>BD 12 minimum</td>
+              <td>Hair style</td>
+              <td>12 BD</td>
             </tr>
             <tr>
-              <td>Hot oil</td>
-              <td>BD 12</td>
+              <td>Hair mask</td>
+              <td>15 BD</td>
             </tr>
             <tr>
               <td>Hair Color</td>
-              <td>BD 15 - roots / BD 25 minimum</td>
+              <td>18 BD &ndash; 35 BD</td>
             </tr>
             <tr>
-              <td>High light</td>
-              <td>BD 25 minimum</td>
+              <td>Highlights</td>
+              <td>25 BD</td>
             </tr>
             <tr>
-              <td>Hair Relaxing / Straightening</td>
-              <td>BD 30 minimum</td>
+              <td>Hair relaxing / straightening</td>
+              <td>30 BD</td>
             </tr>
             <tr>
-              <td>Hair Rebonding</td>
-              <td>BD 50 minimum</td>
+              <td>Hair re-bonding</td>
+              <td>70 BD</td>
             </tr>
             <tr>
               <td>Keratin</td>
-              <td>BD 50 minimum</td>
-            </tr>
-            <tr>
-              <td>Brazilian blow out</td>
-              <td>&nbsp;</td>
-            </tr>
-            <tr>
-              <td>Manicure, Pedicure</td>
-              <td>BD 12</td>
-            </tr>
-            <tr>
-              <td>Make-up</td>
-              <td>BD 10</td>
+              <td>50 BD</td>
             </tr>
           </tbody>
         </table>
