--- a/price_list.html
+++ b/price_list.html
@@ -51,6 +51,22 @@
               <td>30 BD</td>
             </tr>
             <tr>
+              <td>Brightening</td>
+              <td>32 BD</td>
+            </tr>
+            <tr>
+              <td>Rejuvenation treatment</td>
+              <td>35 BD</td>
+            </tr>
+            <tr>
+              <td>Oxygen treatment</td>
+              <td>35&ndash;37 BD</td>
+            </tr>
+            <tr>
+              <td>Oxygen treatment package</td>
+              <td>180 BD</td>
+            </tr>
+            <tr>
               <td><h3>Anti-wrinkle firming treatments</h3></td>
               <td>&nbsp;</td>
             </tr>
@@ -76,7 +92,7 @@
             </tr>
             <tr>
               <td>Vitamin C</td>
-              <td>30 BD</td>
+              <td>32 BD</td>
             </tr>
             <tr>
               <td>Phyto sensitive treatment with special aroma oil</td>
