--- a/facial.html
+++ b/facial.html
@@ -53,13 +53,25 @@
     <div class="row">
       <div class="large-2 columns">
         <span class="th [radius]">
+          <img src="images/o1.png">
+        </span>
+      </div>
+      <div class="large-10 columns">
+        <h3>Oxygen Treatment</h3>
+        <p>Treatment for a glowing radiant skin, thanks to an innovative machine.</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="large-2 columns">
+        <span class="th [radius]">
           <img src="images/f2.jpg">
         </span>
       </div>
       <div class="large-10 columns">
         <h3>Anti-Wrinkle Firming Treatment</h3>
-        <p>Perfect & collagene Masks, which delay the appearance of new wrinkles while intensively firming the skin and restoring its elasticity -- suitable even for the most sensitive skin.</p>
-        <p>Lifting Mask, which leaves a visibly improved appearance and a refined skin (significant recontourning of cheeks, mouth area, chin and forehead), thanks to its restructuring action.</p>
+        <p>Perfect & collagene masks, which delay the appearance of new wrinkles while intensively firming the skin and restoring its elasticity -- suitable even for the most sensitive skin.</p>
+        <p>Lifting mask, which leaves a visibly improved appearance and a refined skin (significant recontourning of cheeks, mouth area, chin and forehead), thanks to its restructuring action.</p>
       </div>
     </div>
 
@@ -84,7 +96,7 @@
       </div>
       <div class="large-10 columns">
         <h3>Treatments for Sensitive Skin</h3>
-        <p>Phyto Mask: based on seaweed with special aroma oil rich in Aloe Vera for a beautifully smooth and firm skin.</p>
+        <p>Phyto mask: based on seaweed with special aroma oil rich in Aloe Vera for a beautifully smooth and firm skin.</p>
         <p>Sensitive Facial: a highly effective treatment for hydrating and calming sensitive, irritated skin, restoring a fresh and smooth complexion.</p>
       </div>
     </div>
@@ -110,7 +122,7 @@
       </div>
       <div class="large-10 columns">
         <h3>Treatment for Unbalanced Skin</h3>
-        <p>Thermo Mask which stimulates the blood circulation, removes toxins and impurities leaving a clear, soft complexion with much smoother wrinkles.</p>
+        <p>Thermo mask which stimulates the blood circulation, removes toxins and impurities leaving a clear, soft complexion with much smoother wrinkles.</p>
       </div>
     </div>
 
