--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2>Welcome!</h2>
         <p>Profile Beauty Salon is one of the first and most renowed salons of Bahrain.</p>
         <div class="panel">
-          <h3>Our Services</h3>
+          <h3>Our Services (for <u>women</u> only)</h3>
           <ul>
             <li><a href="facial.html">Facial Treatments</a></li>
             <li><a href="hair_removal.html">Hair Removal</a></li>
