remove email address

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         <div class="panel">
           <ul>
             <li>Tel. <b>+973 17 713-155</b></li>
-            <li><a href="mailto:info@profilebeautysalon.com">info@profilebeautysalon.com</a></li>
+            <!--li><a href="mailto:info@profilebeautysalon.com">info@profilebeautysalon.com</a></li-->
             <li>
               Osama Bin Zaid Avenue, Adliya, Kingdom of Bahrain
               <div class="row">
