--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <div class="row">
       <div class="large-12 columns">
         <h2>Welcome!</h2>
-        <p>Profile Beauty Salon is one of the first and most renowed salons of Bahrain.</p>
+        <p>Profile Beauty Salon is one of the first and most renowed salons of Bahrain. Now, back as Profile World Beauty Salon with same quality and distinction, as well as some of the old staff. Our salon is newly renovated.</p>
+        <p>Social distancing is applied to ensure the safety of clients and staff.</p>
         <div class="panel">
           <h3>Our Services (for <u>women</u> only)</h3>
           <ul>
