--- a/gallery.html
+++ b/gallery.html
@@ -31,14 +31,16 @@
     <div class="row">
       <div class="large-12 columns">
         <h2>Gallery</h2>
+        <img src="pics/outside.jpeg">
+        <img src="pics/hairdresser.jpeg">
+        <img src="pics/machines.jpeg">
+        <img src="pics/machines2.jpeg">
+        <img src="pics/bed.jpeg">
+        <p>&nbsp;</p>
         <ul class="small-block-grid-5">
           <li><a href="gallery/2.jpg"><img src="gallery/tn_2.jpg"></li>
           <li><a href="gallery/3.jpg"><img src="gallery/tn_3.jpg"></li>
-          <li><a href="gallery/6.jpg"><img src="gallery/tn_6.jpg"></li>
           <li><a href="gallery/8.jpg"><img src="gallery/tn_8.jpg"></li>
-          <li><a href="gallery/9.jpg"><img src="gallery/tn_9.jpg"></li>
-          <li><a href="gallery/10.jpg"><img src="gallery/tn_10.jpg"></li>
-          <li><a href="gallery/11.jpg"><img src="gallery/tn_11.jpg"></li>
           <li><a href="gallery/12.jpg"><img src="gallery/tn_12.jpg"></li>
           <li><a href="gallery/13.jpg"><img src="gallery/tn_13.jpg"></li>
           <li><a href="gallery/14.jpg"><img src="gallery/tn_14.jpg"></li>
@@ -51,8 +53,6 @@
           <li><a href="gallery/21.jpg"><img src="gallery/tn_21.jpg"></li>
           <li><a href="gallery/22.jpg"><img src="gallery/tn_22.jpg"></li>
           <li><a href="gallery/23.jpg"><img src="gallery/tn_23.jpg"></li>
-          <li><a href="gallery/24.jpg"><img src="gallery/tn_24.jpg"></li>
-          <li><a href="gallery/25.jpg"><img src="gallery/tn_25.jpg"></li>
           <li><a href="gallery/26.jpg"><img src="gallery/tn_26.jpg"></li>
           <li><a href="gallery/27.jpg"><img src="gallery/tn_27.jpg"></li>
           <li><a href="gallery/28.jpg"><img src="gallery/tn_28.jpg"></li>
