change the name

--- a/slimming.html
+++ b/slimming.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Slimming Treatments | Profile Beauty Salon | Kingdom of Bahrain</title>
+    <title>Slimming Treatments | Profile World Beauty Salon | Kingdom of Bahrain</title>
     <link rel="stylesheet" href="stylesheets/app.css" />
     <link rel="stylesheet" href="pbs.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
@@ -12,7 +12,7 @@
 
     <div class="row">
       <div class="large-12 columns">
-        <h1>Profile Beauty Salon | Kingdom of Bahrain</h1>
+        <h1>Profile World Beauty Salon | Kingdom of Bahrain</h1>
       </div>
     </div>
 
