leave old phone number too

--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,7 @@
         <h2>Contact Information</h2>
         <div class="panel">
           <ul>
+            <li>Tel. <b>+973 17713155</b></li>
             <li>Tel. <b>+973 77975555</b></li>
             <li><a href="mailto:profilebeautysalon@googlegroups.com">profilebeautysalon@googlegroups.com</a></li>
             <li>
