Update contact.html -- update tels

--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,8 @@
         <h2>Contact Information</h2>
         <div class="panel">
           <ul>
+            <li>Tel. <b>+973 713155</b></li>
             <li>Tel. <b>+973 33544433</b> (for fast appointment booking and answers, use WhatsApp) </li>
-            <li>Tel. <b>+973 77975555</b></li>
             <li><a href="mailto:profilebeautysalon@googlegroups.com">profilebeautysalon@googlegroups.com</a></li>
             <li>
               Osama Bin Zaid Avenue, Adliya, Kingdom of Bahrain
