--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
         <h2>Contact Information</h2>
         <div class="panel">
           <ul>
-            <li>Tel. <b>+973 713155</b></li>
+            <li>Tel. <b>+973 17713155</b></li>
             <li>Tel. <b>+973 33544433</b> (for fast appointment booking and answers, use WhatsApp) </li>
             <li><a href="mailto:profilebeautysalon@googlegroups.com">profilebeautysalon@googlegroups.com</a></li>
             <li>
