--- a/slimming.html
+++ b/slimming.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="refresh" content="0;URL='https://www.profileworldbeautysalon.com/services.html#slimming'">
     <title>Slimming Treatments | Profile World Beauty Salon | Kingdom of Bahrain</title>
     <link rel="stylesheet" href="stylesheets/app.css" />
     <link rel="stylesheet" href="pbs.css" />
